# artimagen

./: CHANGELOG  CMakeLists.txt  Makefile.am  README  README.md  Toolchain-mingw32.cmake  autogen.sh  config.h.in  configure.ac
CVS/: Entries  Repository
debian/: artimagen.install  changelog  control  copyright  files  rules
examples/: basicexa.cxx  connected_lines.lua  lines.lua  logo_example.lua  test_in.tiff  tiffload.lua
src/: CMakeLists.txt  LICENSE  Makefile.am  artimagen.cxx  artimagenl.cxx  defs.lua  gaig.cxx
src/CVS/: Entries  Repository
src/cexample/: Makefile.am  artcexample.c
src/libartimagen/: LICENSE  artimagen.h  artimagen_i.h  geometry.cxx  image.cxx  object.cxx  sample.cxx  wrapper.cxx
src/libartimagen/CVS/: Entries  Repository  Root
